--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 # misc
 .DS_Store
 .prettierignore
-/.vscode
+
+### VisualStudioCode ###
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
 
 # dependencies
 /node_modules
